<resources>
    <string name="app_name">Sapi Advertiser</string>

    <string name="title_activity_advertisement_list">Advertisements</string>
    <string name="title_activity_sign_up">Sign up</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_add_advertisements">Create Advertisement</string>
    <string name="title_home">Home</string>

    <string name="title_dashboard">Dashboard</string>
    <string name="title_save">Save</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_my_advertisements">My Advertisements</string>
    <string name="phone_number_edit_text_hint">Phone Number</string>
    <string name="login_btn_text">Login</string>
    <string name="new_account_text_link">Need a new account?</string>
    <string name="sign_up_btn_text">Sign Up</string>
    <string name="title_new_blog">Add</string>
    <string name="sign_out_btn">Sign Out</string>
    <string name="title_activity_fullscreen">Fullscreen</string>
    <string name="invalid_phone_number">Invalid phone number. Try again.</string>
    <string name="invalid_credential">Invalid Credential.</string>
    <string name="too_many_requests">Too many requests.</string>
    <string name="verify_code">Verify code.</string>
    <string name="loading_advertisers">Loading advertisers…</string>
    <string name="error_first_name">First name required.</string>
    <string name="error_last_name">Last name required.</string>
    <string name="first_name_edit_text_hint">First Name</string>
    <string name="last_name_edit_text_hint">Last Name</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="permission_granted">You already have permission </string>
    <string name="existing_account_text_link">Already have an account?</string>
    <string name="verification_code">Verification Code</string>
    <string name="email_edit_text">Email</string>
    <string name="address_edit_text">Address</string>
    <string name="save_account_settings_btn">Save Account Settings</string>
    <string name="empty_phone_number">Please enter a phone number.</string>
    <string name="no_internet_connection">No internet connection. Please try again later.</string>
    <string name="default_long_description">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley
        of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap
        into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release
        of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software
        like Aldus PageMaker including versions of Lorem Ipsum
    </string>
    <string name="advertisement_location">Location</string>
    <string name="long_description">Long Description</string>
    <string name="short_description">Short Description</string>
    <string name="title">Title</string>
    <string name="default_image_description">Default Image</string>
    <string name="creator">Creator</string>
    <string name="add_advertisement">Post</string>
    <string name="error_title">Title Required</string>
    <string name="error_short_description">Short description required</string>
    <string name="error_long_description">Long description required</string>
    <string name="error_location">Location required</string>
    <string name="advertisement_pictures_location">Advertisement Pictures</string>
    <string name="success_upload_image">The image is uploaded</string>
    <string name="saved_data">The data is saved</string>
    <string name="title_profile">Profile</string>


</resources>
